client/src/pages/feed.css
.feed {
  height: 100%;
  display: flex;
}

.feed main {
  padding: calc(var(--q-space-base) * 4) calc(var(--q-space-base) * 6);
  flex-grow: 1;
}

.feed main section {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

.feed .feed-preview-block {
  margin: 10px;
}

.q-bar__back {
  display: flex;
  align-items: center;
}

